adding ./ to index.html images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- logo image -->
             <div class="site-logo">
                 <a href="index.html" class="avatar">
-                    <img src="Images/avatar-brian.png" alt="Brian" />
+                    <img src="./Images/avatar-brian.png" alt="Brian" />
                     <span class="avatar-tooltip">I'm available for hire!</span>
                 </a>
                 <h2 class="name">Brian O'Mahony</h2>
@@ -124,7 +124,7 @@
                     <div class="intro">
 
                         <!-- info -->
-                        <span class="headline"><img src="Images/wave.png" alt="Hello" />Hello!</span>
+                        <span class="headline"><img src="./Images/wave.png" alt="Hello" />Hello!</span>
                         <h1 class="mb-4 mt-3">I'm Brian.</h1>
                         <p class="mb-4">I am Brian O'Mahony, entrepreneur from Dublin, Ireland. I have experience across multiple domains - including finance, marketing, operations, sales, fundraising and strategy. I am currently looking for a new opportunity.</p>
 
@@ -165,7 +165,7 @@
                                 <p class="mb-0">I have a bachelors degree in Global Business from Trinity College Dublin, and am also the co-founder and former CEO of Bounce Insights, a multi-million euro research technology company based in Dublin. I am also the co-founder
                                     of Tribe Charity, a fundraiser for mental health charities in Ireland.I love running, and have participate in multiplelong-distance events - inluding 5 marathons and a 160km ultra-marathon that took me 23 hours to complete!
                                     I am currently teaching myself to become a full stack developer.
-                                    <img src="Images/smile.png" width="22" height="22" alt="smile" /></p>
+                                    <img src="./Images/smile.png" width="22" height="22" alt="smile" /></p>
                             </div>
                             <div class="spacer" data-height="25"></div>
                             <!-- about info -->
@@ -445,7 +445,7 @@
                                                     <span class="category">Interview</span>
                                                 </a>
                                                 <a href="blog-single.html" class="blog-link">
-                                                    <img src="Images/blog-1.png" alt="blog-title" />
+                                                    <img src="./Images/blog-1.png" alt="blog-title" />
                                                 </a>
                                             </div>
                                             <div class="details">
@@ -466,7 +466,7 @@
                                                     <span class="category">Podcast</span>
                                                 </a>
                                                 <a href="blog-single.html" class="blog-link">
-                                                    <img src="Images/blog-2.png" alt="blog-title" />
+                                                    <img src="./Images/blog-2.png" alt="blog-title" />
                                                 </a>
                                             </div>
                                             <div class="details">
@@ -487,7 +487,7 @@
                                                     <span class="category">Meetups</span>
                                                 </a>
                                                 <a href="blog-single.html" class="blog-link">
-                                                    <img src="Images/blog-3.png" alt="blog-title" />
+                                                    <img src="./Images/blog-3.png" alt="blog-title" />
                                                 </a>
                                             </div>
                                             <div class="details">
@@ -508,7 +508,7 @@
                                                     <span class="category">Updates</span>
                                                 </a>
                                                 <a href="blog-single.html" class="blog-link">
-                                                    <img src="Images/blog-4.png" alt="blog-title" />
+                                                    <img src="./Images/blog-4.png" alt="blog-title" />
                                                 </a>
                                             </div>
                                             <div class="details">
@@ -529,7 +529,7 @@
                                                     <span class="category">Inspiration</span>
                                                 </a>
                                                 <a href="blog-single.html" class="blog-link">
-                                                    <img src="Images/blog-5.png" alt="blog-title" />
+                                                    <img src="./Images/blog-5.png" alt="blog-title" />
                                                 </a>
                                             </div>
                                             <div class="details">
@@ -550,7 +550,7 @@
                                                     <span class="category">Interview</span>
                                                 </a>
                                                 <a href="blog-single.html" class="blog-link">
-                                                    <img src="Images/blog-6.png" alt="blog-title" />
+                                                    <img src="./Images/blog-6.png" alt="blog-title" />
                                                 </a>
                                             </div>
                                             <div class="details">
