updated profile information and resume

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Brian O'Mahony - Personal Portfolio & CV Resume Template">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--to change-->
-    <link rel="shortcut icon" type="image/x-icon" href="Images/avatar.png">
+    <link rel="shortcut icon" type="image/x-icon" href="Images/avatar-brian.png">
 
     <!-- STYLES -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
@@ -88,7 +88,7 @@
                     <li><a href="#home"><i class="ti-home"></i>Home</a></li>
                     <li><a href="#about"><i class="ti-user"></i>About</a></li>
                     <li><a href="#experience"><i class="ti-book"></i>Experience</a></li>
-                    <li><a href="#blog"><i class="ti-pencil"></i>Blog</a></li>
+                    <!--<li><a href="#blog"><i class="ti-pencil"></i>Blog</a></li> -->
                     <li><a href="#contact"><i class="ti-comment"></i>Contact</a></li>
                 </ul>
             </nav>
@@ -97,10 +97,10 @@
             <div class="footer">
                 <!-- social icons TO DO-->
                 <ul class="social-icons list-inline mb-3">
-                    <li class="list-inline-item"><a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/brian-omahony/" class="linkedin"><i class="fab fa-linkedin"></i></a></li>
                     <li class="list-inline-item"><a href="https://github.com/BOM-98" class="github"><i class="fab fa-github"></i></a></li>
-                    <li class="list-inline-item"><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
-                    <li class="list-inline-item"><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
+                   <!-- <li class="list-inline-item"><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li> -->
                 </ul>
             </div>
 
@@ -126,7 +126,7 @@
                         <!-- info -->
                         <span class="headline"><img src="./Images/wave.png" alt="Hello" />Hello!</span>
                         <h1 class="mb-4 mt-3">I'm Brian.</h1>
-                        <p class="mb-4">I am Brian O'Mahony, entrepreneur from Dublin, Ireland. I have experience across multiple domains - including finance, marketing, operations, sales, fundraising and strategy. I am currently looking for a new opportunity.</p>
+                        <p class="mb-4">I am a highly experienced and successful startup Founder-CEO from Dublin, Ireland. I have a proven track record of leading and scaling companies to commercial success. I have led multiple successful funding rounds, and secured my last company as part of Enterprise Ireland's High Potential Startup Unit. My experience ranges from developing company strategy and validating business models, to establishing and managing various departments, including marketing, sales, finance, legal, human resources and operations. I am currently exploring my next adventure and in the meantime am upskilling as a software engineer - if you have any suggestions or would like to chat please get in touch!</p>
 
                         <!-- buttons -->
                         <div class="mt-4">
@@ -162,9 +162,9 @@
                             <div class="rounded bg-white p-4">
                                 <h3 class="mt-0 mb-2">Bio</h3>
                                 <!-- about text -->
-                                <p class="mb-0">I have a bachelors degree in Global Business from Trinity College Dublin, and am also the co-founder and former CEO of Bounce Insights, a multi-million euro research technology company based in Dublin. I am also the co-founder
-                                    of Tribe Charity, a fundraiser for mental health charities in Ireland.I love running, and have participate in multiplelong-distance events - inluding 5 marathons and a 160km ultra-marathon that took me 23 hours to complete!
-                                    I am currently teaching myself to become a full stack developer.
+                                <p class="mb-0">I am the co-founder and former CEO of Bounce Insights, a multi-million euro research tech company based in Dublin. I hold a bachelors in Business Studies and also the co-founder
+                                    of Tribe Charity, a fundraiser for mental health charities in Ireland. I love running, and have participate in multiplelong-distance events - inluding 5 marathons and a 160km ultra-marathon that took me 23 hours to complete!
+                                    I am currently looking out for a new opportunity and teaching myself to become a full stack developer while I am at it.
                                     <img src="./Images/smile.png" width="22" height="22" alt="smile" /></p>
                             </div>
                             <div class="spacer" data-height="25"></div>
@@ -359,54 +359,54 @@
                             <div class="col-md-6">
                                 <!-- resume item -->
                                 <div class="resume-item bg-white rounded">
-                                    <span class="time data-color data-border-color" data-color="#FF6525" data-border-color="#FF6525">2017 - Present</span>
-                                    <h4 class="title">Honours Degree</h4>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
+                                    <span class="time data-color data-border-color" data-color="#FF6525" data-border-color="#FF6525">2022</span>
+                                    <h4 class="title">Head of Growth</h4>
+                                    <p class="mb-0">As the Head of Growth at Bounce Insights I co-ordinated and aligned Sales, Marketing and Customer Success to increase our ARR</p>
                                 </div>
                             </div>
 
                             <div class="col-md-6">
                                 <!-- resume item -->
                                 <div class="resume-item bg-white rounded">
-                                    <span class="time data-color data-border-color" data-color="#49C16C" data-border-color="#49C16C">2015 - Present</span>
-                                    <h4 class="title">Visual Designer</h4>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
+                                    <span class="time data-color data-border-color" data-color="#49C16C" data-border-color="#49C16C">2019 - 2022</span>
+                                    <h4 class="title">Founder - CEO</h4>
+                                    <p class="mb-0">After founding Bounce Insights in 2019 I served as the CEO for its first three years. I formed the initial team and led our first two rounds of investment. Under my leadership, Bounce tripled revenue year-on-year and headcount grew to double digits.</p>
                                 </div>
                             </div>
 
                             <div class="col-md-6">
                                 <!-- resume item -->
                                 <div class="resume-item bg-white rounded">
-                                    <span class="time data-color data-border-color" data-color="#FF3366" data-border-color="#FF3366">2012 - 2015</span>
-                                    <h4 class="title">Bachelor’s Degree</h4>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
+                                    <span class="time data-color data-border-color" data-color="#FF3366" data-border-color="#FF3366">2017 - 2021</span>
+                                    <h4 class="title">Tribe Charity</h4>
+                                    <p class="mb-0">Co-Founder of Tribe Charity - an online fundraiser that has raised over €150k for mental health charities across Ireland</p>
                                 </div>
                             </div>
 
                             <div class="col-md-6">
                                 <!-- resume item -->
                                 <div class="resume-item bg-white rounded">
-                                    <span class="time data-color data-border-color" data-color="#33C2DB" data-border-color="#33C2DB">2012 - 2014</span>
-                                    <h4 class="title">UI & UX Designer</h4>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
+                                    <span class="time data-color data-border-color" data-color="#33C2DB" data-border-color="#33C2DB">2020</span>
+                                    <h4 class="title">Bachelors in Business Studies</h4>
+                                    <p class="mb-0">I graduated from Trinity College Dublin with first degree honours in Business Studies</p>
                                 </div>
                             </div>
 
                             <div class="col-md-6">
                                 <!-- resume item -->
                                 <div class="resume-item bg-white rounded">
-                                    <span class="time data-color data-border-color" data-color="#5848B4" data-border-color="#5848B4">2007 - 2010</span>
-                                    <h4 class="title">Academic Degree</h4>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
+                                    <span class="time data-color data-border-color" data-color="#5848B4" data-border-color="#5848B4">2018 - present</span>
+                                    <h4 class="title">Ultra Runner</h4>
+                                    <p class="mb-0">I have a keen interest in distance running. I have completed 5 marathons and two ultra-marathons. I have qualified for the boston marathon after running a sub- 3 hour marathon and have also completed a 160 kilometer ultramarathon in Connemara that took 23 hours straight!</p>
                                 </div>
                             </div>
 
                             <div class="col-md-6">
                                 <!-- resume item -->
                                 <div class="resume-item bg-white rounded">
-                                    <span class="time data-color data-border-color" data-color="#FFB300" data-border-color="#FFB300">2009 - 2012</span>
-                                    <h4 class="title">WordPress Developer</h4>
-                                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
+                                    <span class="time data-color data-border-color" data-color="#FFB300" data-border-color="#FFB300">2016</span>
+                                    <h4 class="title">Leaving Certificate</h4>
+                                    <p class="mb-0">I graduated from St.Marys College Dublin in the 99th percentile with my Leaving Cert results</p>
                                 </div>
                             </div>
 
@@ -652,7 +652,7 @@
                                     <span class="icon ti-mobile data-color data-bg-color" data-color="#5848B4" data-bg-color="#E6E1FF"></span>
                                     <div class="details">
                                         <h3 class="mb-0 mt-0">Phone</h3>
-                                        <p class="mb-0">+1-202-555-0135</p>
+                                        <p class="mb-0">+353-86-441-0845</p>
                                     </div>
                                 </div>
                                 <div class="spacer d-md-none d-lg-none" data-height="30"></div>
@@ -664,7 +664,7 @@
                                     <span class="icon ti-email data-color data-bg-color" data-color="#FF6525" data-bg-color="#FFD9C9"></span>
                                     <div class="details">
                                         <h3 class="mb-0 mt-0">E-Mail</h3>
-                                        <p class="mb-0">hello@riono.com</p>
+                                        <p class="mb-0">brianpeteromahony@gmail.com</p>
                                     </div>
                                 </div>
                                 <div class="spacer d-md-none d-lg-none" data-height="30"></div>
@@ -676,7 +676,7 @@
                                     <span class="icon ti-map data-color data-bg-color" data-color="#FF3366" data-bg-color="#FFD5DF"></span>
                                     <div class="details">
                                         <h3 class="mb-0 mt-0">Location</h3>
-                                        <p class="mb-0">California, USA</p>
+                                        <p class="mb-0">Dublin, Ireland</p>
                                     </div>
                                 </div>
                             </div>
