--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <span class="avatar-tooltip">I'm available for hire!</span>
                 </a>
                 <h2 class="name">Brian O'Mahony</h2>
-                <span class="slogan">Entrepreneur | Marketer | Training Software Engineer</span>
+                <span class="slogan">Entrepreneur | B.B.S Business Studies | Training Software Engineer</span>
             </div>
 
             <!-- main menu -->
@@ -126,7 +126,10 @@
                         <!-- info -->
                         <span class="headline"><img src="./Images/wave.png" alt="Hello" />Hello!</span>
                         <h1 class="mb-4 mt-3">I'm Brian.</h1>
-                        <p class="mb-4">I am a highly experienced and successful startup Founder-CEO from Dublin, Ireland. I have a proven track record of leading and scaling companies to commercial success. I have led multiple successful funding rounds, and secured my last company as part of Enterprise Ireland's High Potential Startup Unit. My experience ranges from developing company strategy and validating business models, to establishing and managing various departments, including marketing, sales, finance, legal, human resources and operations. I am currently exploring my next adventure and in the meantime am upskilling as a software engineer - if you have any suggestions or would like to chat please get in touch!</p>
+                        <p class="mb-4">I am a highly experienced and successful startup founder/CEO from Dublin, Ireland. 
+                            I have led multiple successful funding rounds, with my last company joining Enterprise Ireland's High Potential Startup Unit. 
+                            My experience ranges from developing strategy and validating business models, to establishing and managing departments, including marketing, sales, finance, legal, human resources and operations. 
+                            I am currently exploring my next adventure while upskilling as a software engineer. If you have any suggestions or would like to chat, please get in touch!</p>
 
                         <!-- buttons -->
                         <div class="mt-4">
@@ -162,9 +165,9 @@
                             <div class="rounded bg-white p-4">
                                 <h3 class="mt-0 mb-2">Bio</h3>
                                 <!-- about text -->
-                                <p class="mb-0">I am the co-founder and former CEO of Bounce Insights, a multi-million euro research tech company based in Dublin. I hold a bachelors in Business Studies and also the co-founder
-                                    of Tribe Charity, a fundraiser for mental health charities in Ireland. I love running, and have participate in multiplelong-distance events - inluding 5 marathons and a 160km ultra-marathon that took me 23 hours to complete!
-                                    I am currently looking out for a new opportunity and teaching myself to become a full stack developer while I am at it.
+                                <p class="mb-0">I am the co-founder and former CEO of Bounce Insights, a multi-million euro research tech company based in Dublin. I hold a bachelors in Business Studies and am the co-founder
+                                    of Tribe Charity, a fundraiser for mental health charities in Ireland. I love running, and have participated in multiple long-distance events - inluding 5 marathons and a 160km ultra-marathon that took me 23 hours to complete!
+                                    I am currently looking out for a new opportunity and teaching myself to become a full stack developer while I am at it
                                     <img src="./Images/smile.png" width="22" height="22" alt="smile" /></p>
                             </div>
                             <div class="spacer" data-height="25"></div>
@@ -370,7 +373,7 @@
                                 <div class="resume-item bg-white rounded">
                                     <span class="time data-color data-border-color" data-color="#49C16C" data-border-color="#49C16C">2019 - 2022</span>
                                     <h4 class="title">Founder - CEO</h4>
-                                    <p class="mb-0">After founding Bounce Insights in 2019 I served as the CEO for its first three years. I formed the initial team and led our first two rounds of investment. Under my leadership, Bounce tripled revenue year-on-year and headcount grew to double digits.</p>
+                                    <p class="mb-0">After founding Bounce Insights in 2019 I served as the CEO for its first three years. I formed the initial team and led our first two rounds of investment. Under my leadership, Bounce tripled revenue year-on-year and headcount grew to double digits</p>
                                 </div>
                             </div>
 
