--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Brian O'Mahony - Personal Portfolio & CV Resume Template</title>
+    <title>Brian O'Mahony - Personal Portfolio & CV</title>
     <meta name="description" content="Brian O'Mahony - Personal Portfolio & CV Resume Template">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--to change-->
